# kitchen-hand

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
app/: README.md  pubspec.yaml
app/lib/: main.dart
app/lib/api/: api_client.dart
app/lib/screens/: drafts_screen.dart  inbox_screen.dart  recipes_screen.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
docs/: app-spec.md  data-sources.md  hardware-sensors-research.md  ingestion.md  joyoung-cj-a9u-notes.md  mvp-bechamel.md  mvp-fried-rice.md  open-rig-hardware.md  perception-sensors.md  roadmap.md
inbox/: README.md
inbox/chengdu-tomato-egg-noodles/: url.txt  youtube.md
recipes/: bechamel-sauce.yaml  chicken-fried-rice.yaml  kung-pao-chicken.yaml
recipes/_drafts/: README.md  chengdu-tomato-egg-noodles.yaml
schema/: recipe-v1.schema.json
service/: pyproject.toml
service/app/: core.py  main.py
service/app/routers/: drafts.py  inbox.py  recipes.py  schema_routes.py
service/tests/: test_api.py
tools/: fetch_youtube.py  requirements.txt  validate_recipes.py
