[project]
name = "kitchen-hand"
version = "0.1.0"
description = "Recipe collection and ingestion tooling for Kitchen Hand"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "markitdown[youtube-transcription]>=0.1.6",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
