[project]
name = "kitchen-hand-service"
version = "0.1.0"
description = "Ingestion workflow API backend for Kitchen Hand"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jsonschema>=4.26.0",
    "markitdown[youtube-transcription]>=0.1.6",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
